# router/app.go
@@ -23,5 +23,8 @@ func Router() *gin.Engine {
 
 	// 用户
 	r.GET("user-detail",service.GetUserDetail)
+
+	// 提交记录
+	r.GET("submit-list",service.GetSubmitList)
 	return r
 }
